syntax = "proto3";
package spire.types;
option go_package = "github.com/spiffe/spire/proto/spire/types";

message FederatesWithMatch {
    enum MatchBehavior {
        // Indicates that the federated trust domains in this match are 
        // equal to the candidate trust domains, independent of ordering.
        MATCH_EXACT = 0;

        // Indicates that the federated trust domains in this match are 
        // a subset of the candidate trust domains.
        MATCH_SUBSET = 1;
    }

    // The set of trust domains to match on.
    repeated string trust_domains = 1;

    // How to match the selectors.
    MatchBehavior match = 2;
}